--- a/src/main.scss
+++ b/src/main.scss
@@ -114,10 +114,9 @@ img {
   }
 }
 
-#character_img {
-  img {
-    width: 350px;
-  }
+img {
+  height: 520px;
+  width: auto;
 }
 
 #home-languages {
