Minor css header fixes

--- a/src/_media.scss
+++ b/src/_media.scss
@@ -12,14 +12,14 @@
       flex-direction: column;
     }
     & #character_base_info {
-      padding-top: 2rem;
+      padding: 2rem 1rem;
       flex-grow: 1;
     }
 
     #character_img {
       text-align: center;
       img {
-        height: 520px;
+        height: 440px;
         width: auto;
       }
     }
@@ -67,7 +67,7 @@
     }
 
     #character_base_info {
-      padding-top: 2rem;
+      padding: 2rem 1rem;
       flex-grow: 1;
     }
 
